# omniads

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/creative_metadata/: autosure_30s.json  fitpulse_30s.json  quickcart_15s.json  streamfuel_15s.json
docs/: architecture.md  business_problem.md  candidate_precomputation.md  creative_assets.md  data_model.md  dynamodb_sharded_counters.md  event_lake_and_athena.md  request_tracing.md  service_boundaries.md  targeting_and_pacing.md  timeout_policy.md
infra/terraform/: athena_named_queries.tf  glue_athena.tf  outputs.tf  provider.tf  s3.tf  variables.tf
libs/contracts/: ad_request.py  ad_response.py  budget_pacing.py  campaign.py  candidate.py  decision_trace.py  events.py  frequency_cap.py  ranking.py  service_status.py  targeting.py  vast.py
libs/observability/: logger.py
libs/pricing/: cpm.py
reports/: release_1_ads_foundation.md  release_2_decision_engine.md
scripts/: query_local_event_lake.py  run_local_analytics_reports.py
services/: local_services_map.md
services/ads_gateway/: Dockerfile
services/budget_pacing_service/: Dockerfile
services/campaign_service/: Dockerfile
services/candidate_service/: Dockerfile
services/event_logging_service/: Dockerfile
services/frequency_cap_service/: Dockerfile
services/ranking_service/: Dockerfile
services/targeting_service/: Dockerfile
services/vast_service/: Dockerfile
sql/athena/: campaign_performance.sql  create_external_tables.sql  creative_performance.sql  fill_rate.sql  no_fill_reasons.sql  pacing_health.sql
(+71 files in other folders)
