[project]
name = "omniads"
version = "0.1.0"
description = "AWS-native production OTT ad decisioning platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.18",
    "httpx>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]